# tif2jxl

./: CMakeLists.txt  main.cpp  vcpkg.json
